tests/custom/STARIS_2022/basic/set-operators/in-type-error-03/stderr.expected
Error:
    in.essence:2:21:
  |
2 | such that a = (1 in true)
  |                     ^^^^
Type error:
	Expected: container of int
	Got: bool

